--- a/config.env
+++ b/config.env
@@ -55,7 +55,7 @@ CMS_SMTP_FROM_LINE_OVERRIDE=YES
 ## access the CMS. For most installations this is unnecessary and can
 ## be left as default, however, if you know this, it won't hurt to
 ## set it
-CMS_SERVER_NAME=http://dom-mm-mgt1:33775
+CMS_SERVER_NAME=cms.example.org
 
 ## Sometimes you want Xibo to run in a sub directory of the webserver
 ## rather than at the root. If so, specify it here. Comment it out to
