--- a/cms_remote-mysql.yml
+++ b/cms_remote-mysql.yml
@@ -2,14 +2,14 @@ version: "3"
 
 services:
     cms-xmr:
-        image: xibosignage/xibo-xmr:release-0.8
+        image: xibosignage/xibo-xmr
         ports:
             - "9505:9505"
         restart: always
         env_file: config.env
         mem_limit: 256m
     cms-web:
-        image: xibosignage/xibo-cms:release-2.3.7
+        image: xibosignage/xibo-cms
         volumes:
             - "./shared/cms/custom:/var/www/cms/custom:Z"
             - "./shared/backup:/var/www/backup:Z"
